# fullstack-shopping-list

./: .gitignore  README.md  babel.config.json  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_shoppinglist_user.py
assets/: index.js  index.tsx
assets/javascript/: App.tsx
assets/javascript/components/: ItemList.tsx  MyButtons.tsx  Navbar.tsx
list/: models.py  serializers.py  urls.py  views.py
list/migrations/: 0001_initial.py  0002_remove_shoppinglist_user.py  0003_item_price.py  0004_remove_item_shoppinglist.py
shoppinglist/: asgi.py  settings.py  urls.py  wsgi.py
static/: index-bundle.js  index-bundle.js.LICENSE.txt
templates/frontend/: index.html
